--- a/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editUsers.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editUsers.html.twig
@@ -21,18 +21,19 @@
     <ul>
         {%  for user in allUsers %}
             <li>
-                {{  user.username }}
+                {{  user.email }}
                 {%  if user in currentUsers %}
                     <form action="#" method="post">
                         <input type="hidden" name="action" value="remove">
-                        <input type="hidden" name="userName" value="{{ user.username }}">
+                        <input type="hidden" name="email" value="{{ user.email }}">
                         <input type="submit" value="Remove" class="btn btn-warning">
                     </form>
                 {%  else %}
 
                     <form action="#" method="post">
                         <input type="hidden" name="action" value="add">
-                        <input type="hidden" name="userName" value="{{ user.username }}">
+                        <input type="hidden" name="user" value="existing">
+                        <input type="hidden" name="email" value="{{ user.email }}">
                         <input type="submit" value="Add" class="btn btn-warning">
                     </form>
                 {%  endif %}
